Bug 331187 - Auto-increment sequence checkbox should only be visible on sequence diagrams
Summary: Auto-increment sequence checkbox should only be visible on sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-16 13:34 UTC by Joris Steyn
Modified: 2014-02-16 13:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joris Steyn 2014-02-16 13:34:42 UTC
The diagram properties dialog shows the "Autoincrement Sequence" checkbox under "General Settings", regardless of the diagram type, but the checkbox is only applicable for sequence diagrams.

Reproducible: Always

Steps to Reproduce:
1. Open the properties dialog of a class diagram
Actual Results:  
The described checkbox is visible.

Expected Results:  
The checkbox should not be visible for non-sequence diagrams.

Behaviour present in 4.12.
Comment 1 Joris Steyn 2014-02-16 13:58:45 UTC
Git commit 50dbbc03ecd836d4766b3b03d9ba45e3f2e43767 by Joris Steyn.
Committed on 16/02/2014 at 13:48.
Pushed by jorissteyn into branch 'KDE/4.12'.

Hide "Autoincrement sequence" on properties dialog

(ported from 7a9172ca03ced2392a64a6380ae2055f5d326478)
FIXED-IN: 4.12.3

M  +2    -0    umbrello/dialogs/umlviewdialog.cpp

http://commits.kde.org/umbrello/50dbbc03ecd836d4766b3b03d9ba45e3f2e43767
Comment 2 Joris Steyn 2014-02-16 13:58:48 UTC
Git commit 7a9172ca03ced2392a64a6380ae2055f5d326478 by Joris Steyn.
Committed on 16/02/2014 at 13:42.
Pushed by jorissteyn into branch 'master'.

Hide "Autoincrement sequence" on properties dialog
FIXED-IN: 4.12.3

M  +2    -0    umbrello/dialogs/diagrampropertiespage.cpp

http://commits.kde.org/umbrello/7a9172ca03ced2392a64a6380ae2055f5d326478