Hide "Autoincrement sequence" on properties dialog

BUG: 331187
FIXED-IN: 4.12.3